--- a/links/src/App.css
+++ b/links/src/App.css
@@ -1,10 +1,26 @@
-/* --------------- CSS RESET --------------- */
+/* TODO */
+
+/*! FIX ALL ABSOLUTE POSITIONING (except possibly cubes) */
+
+/*! CHANGE FONT SIZES -> EM / REM */
+
+/*! Scalable "Link Playground" on smaller screens */
+
+/*! Scalable "About" window on smaller screens */
+
+/*! Remove background image w/ media queries smaller than fullscreen PC */
+
+/** Better color palettes */
+
+/* TODO */
+
+/* ----------------------- CSS RESET ---------------------- */
 *, *::before, *::after, #root {
   box-sizing: border-box;
   outline: none;
   margin: 0;
   padding: 0;
-  /* OVERFLOW HIDDEN WILL BREAK "3D" FUNCTIONALITY!! LEAVE OUT! */
+  /* OVERFLOW HIDDEN WILL BREAK "3D" -> LEAVE OUT */
   min-width: 0;
   min-height: 0;
   font-family: 'Orbitron', sans-serif;
@@ -14,11 +30,9 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-/* APPLY TO MAIN BODY OF PAGE */
 body {
-  /* can also use 1.5  */
+  /* can also use 1.5rem */
   line-height: calc(1em + 0.5rem);
-  /* This one might not be needed if lots of large font isn't used */
   -webkit-font-smoothing: antialiased;
 }
 
@@ -36,23 +50,33 @@ input, button, textarea, select {
   isolation: isolate;
 }
 
-/* --------------- PARENT --------------- */
-
-.parent {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+html {
+  /* height: 100%; */
 }
 
-/* --------------- LOGO --------------- */
+/* ------------------------ PARENT ------------------------ */
+
+.parent {
+  border: 2px dotted cyan;
+  min-width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+
+/* ------------------------ NAVBAR ------------------------ */
+
+nav {
+  border: 1px solid yellow;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem 0 2rem;
+}
 
 .logo {
-  position: absolute;
-  top: 0px;
-  margin-top: 20px;
-  height: 7vh;
-  width: 7vh;
-  margin-left: 20px;
+  height: 70px;
+  width: 70px;
   transition: all .8s ease;
 }
 
@@ -65,18 +89,12 @@ input, button, textarea, select {
   border-radius: 50%;
 }
 
-/* --------------- ABOUT --------------- */
+/* --------------------- ABOUT BUTTON --------------------- */
 
 .about {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 40px;
-  margin-right: 40px;
   color: white;
-  font-size: 25px;
+  font-size: 1.6rem;
   cursor: pointer;
-  /* border: 1px solid yellow; */
 }
 
 .about--label {
@@ -86,7 +104,6 @@ input, button, textarea, select {
 .about--label:hover {
   transition: all .8s ease;
   animation: flicker 1s linear infinite;
-  border-radius: 50%; 
   cursor: pointer;
 }
 
@@ -99,12 +116,11 @@ input, button, textarea, select {
 }
 
 /* onClick event? what onClick event? ¬‿¬ */
-
 .about--checkbox:checked ~ .collapsible--container {
   display: flex;
   flex-direction: column;
-  line-height: 35px; 
-  height: 150px;
+  line-height: 2.2rem; 
+  height: 6.5rem;
   transition: height 0.3s, padding 0.3s;
 }
 
@@ -112,10 +128,10 @@ input, button, textarea, select {
   position: absolute;
   /* transform replaces margins due to absolute positioning */
   transform: translate(-400px, 40px);
-  width: 500px;
+  min-width: 500px;
   box-shadow:
   inset 0 0 1em hsla(0, 0%, 100%, 0.8),
-  0 0 .8em hwb(51 0% 0% / 0.8),
+  0 0 .8em hwb(51 1% 0% / 0.8),
   0 0 .5em  hsla(0, 0%, 100%, 0.8);
   border-radius: 15px;
   height: 0px;
@@ -124,16 +140,16 @@ input, button, textarea, select {
 }
 
 .collapsible--content {
-  font-size: 20px;
-  padding: 20px;
+  font-size: 1.2rem;
+  padding: 1rem;
 }
 
-/* -------------------- FOOTER --------------------- */
+/* ------------------------ FOOTER ------------------------ */
 
 .footer {
-  color: white;
   position: absolute;
-  bottom: 40px;
+  color: white;
+  bottom: 20px;
   left: 50%;
   height: 60px;
   width: 300px;
@@ -142,7 +158,6 @@ input, button, textarea, select {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid yellow; */
 }
 
 .footer--border {
@@ -157,17 +172,20 @@ input, button, textarea, select {
   0 0 .8em rgba(23, 255, 236, 0.8),
   0 0 .5em  hsla(0, 0%, 100%, 0.8);
   transition: box-shadow 2s ease;
+  border-radius: 10px;
 }
 
 .footer--border:not(:hover) {
   box-shadow: none;
   transition: box-shadow 2s ease;
+  border-radius: 10px;
 }
 
 .footer--border:hover .footer--rect {
   stroke-width: 2px;
   stroke-dashoffset: 0;
   stroke-dasharray: 760;
+  border-radius: 10px;
 }
 
 .footer--rect {
@@ -181,12 +199,32 @@ input, button, textarea, select {
   transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
 }
 
-/* -------------------- 3D CUBE(S) --------------------- */
+.footer--content {
+  color: white;
+}
+
+/* ---------------------- DEBUGGING ------------------------ */
+
+/* .center--screen {
+  height: 91%;
+  width: 100%;
+  border: 1px solid cyan;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+/* ---------------------- 3D CUBE(S) ----------------------- */
+
+#a {
+  position: absolute;
+  transition: all 5s ease-in-out;
+  cursor: pointer;
+}
 
 .box-container {
   /* not always inherited: copy down to children if needed */
   transform-style: preserve-3d;
-  position: absolute;
   perspective: 1500px;
   perspective-origin: center center;
   color: white;
@@ -216,31 +254,28 @@ input, button, textarea, select {
 
 .box-area {
   position: absolute;
-  top: .2em;
-  bottom: .2em;
-  left: .2em;
-  right: .2em;
+  top: .5em;
+  bottom: .5em;
+  left: .5em;
+  right: .5em;
   margin: auto;
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   transform-style: preserve-3d;
   animation: rotate 15s linear infinite;
 }
 
-
 .box--text {
-  min-width: 200px;
-  margin-top: -140px;
-  margin-left: -80px;
   position: absolute;
+  bottom: 105px;
   opacity: 0;
 }
 
 
 .box--line {
-  margin-top: -30px;
-  margin-left: -80px;
-  width: 0px;
+  position: absolute;
+  bottom: 100px;
+  width: 0%;
   height: 2px;
   opacity: 0;
 }
@@ -252,10 +287,9 @@ input, button, textarea, select {
 }
 
 .box--image {
-  margin-left: 5px;
-  margin-top: 35px;
-  height: 45px;
-  width: 55px;
+  margin-left: 10px;
+  height: 70px;
+  width: 100px;
   animation: rotateY 10s linear infinite;
 }
 
@@ -273,8 +307,8 @@ input, button, textarea, select {
 
 .box {
   position: absolute;
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   border-radius: 10%;
   perspective: 400px;
   opacity: 0.6;
@@ -299,29 +333,168 @@ input, button, textarea, select {
 @keyframes fadeIn {   0% { opacity: 0; }   100% { opacity: 1; } } 
 
 #box-front {
-  transform: translateZ(-30px);
+  transform: translateZ(-50px);
 }
 
 #box-back {
-  transform: translateZ(30px);
+  transform: translateZ(50px);
 }
 
 #box-bottom {
-  transform: translateY(-30px) rotateX(90deg);
-
+  transform: translateY(-50px) rotateX(90deg);
 }
 
 #box-top {
-  transform: translateY(30px) rotateX(90deg);
-
+  transform: translateY(50px) rotateX(90deg);
 }
 
 #box-left {
-  transform: translateX(-30px) rotateY(90deg);
-
+  transform: translateX(-50px) rotateY(90deg);
 }
 
 #box-right{
-  transform: translateX(30px) rotateY(90deg);
+  transform: translateX(50px) rotateY(90deg);
+}
 
+/* ------------------ TILTING 3D CSS BOX ------------------- */
+
+.tilter {
+  height: 90.9%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.tilter--background--image {
+  height: 100%;
+  width: 100%;
+}
+
+.tilter--box--area {
+  position: absolute;
+  top: 5em;
+  bottom: .5em;
+  left: .5em;
+  right: .5em;
+  margin: auto;
+  width: 250px;
+  height: 250px;
+  transform-style: preserve-3d;
+}
+
+.tilter--box {
+  color: white;
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  border-radius: 10%;
+  perspective: 400px;
+  opacity: 0.6;
+  text-align: center;
+  box-shadow:
+    inset 0 0 2em hsla(0, 0%, 100%, 0.9),
+    0 0 1em  hsla(0, 0%, 100%, 0.9);
+  border-radius: 10%;
+  border: 5px solid mediumslateblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#box--tilt {
+  box-shadow:
+  inset 0 0 1em hsla(0, 0%, 100%, 0.8),
+  0 0 .5em  hsla(0, 0%, 100%, 0.8);
+  border-radius: 10%;
+}
+
+#tilter--box-front {
+  transform: translateZ(-150px);
+}
+
+#tilter--box-back {
+  transform: translateZ(150px);
+}
+
+#tilter--box-bottom {
+  transform: translateY(-150px) rotateX(90deg);
+}
+
+#tilter--box-top {
+  transform: translateY(150px) rotateX(90deg);
+}
+
+#tilter--box-left {
+  transform: translateX(-150px) rotateY(90deg);
+}
+
+#tilter--box-right{
+  transform: translateX(150px) rotateY(90deg);
+}
+
+/* ------------------ MEDIA QUERIES ------------------- */
+
+/** -- X-Small Phones -- **/
+@media (max-width: 420px) {
+  
+  /* reduce cube size */
+  .box {
+    width: 50px;
+    height: 50px;
+  }
+
+  #box-front {
+    transform: translateZ(-25px);
+  }
+  
+  #box-back {
+    transform: translateZ(25px);
+  }
+  
+  #box-bottom {
+    transform: translateY(-25px) rotateX(90deg);
+  }
+  
+  #box-top {
+    transform: translateY(25px) rotateX(90deg);
+  }
+  
+  #box-left {
+    transform: translateX(-25px) rotateY(90deg);
+  }
+  
+  #box-right{
+    transform: translateX(25px) rotateY(90deg);
+  }
+
+  /* reduce box area */
+  .box-area {
+    width: 50px;
+    height: 50px;
+  }
+
+  /* reduce image size, no anim */
+  .box--image {
+    margin-left: 10px;
+    height: 40px;
+    width: 40px;
+    animation: none;
+  }
+
+  /* un-render box text fonts */
+  .box--text {
+    display: none;
+  }
+
+  .box--line {
+    display: none;
+  }
+
+  /* resize "about" accordion */
+
+  /* reduce nav padding */
+
+  /* resize fonts */
 }
